# reflectai

./: .gitignore  LICENSE  README.md  README_KO.md  pyproject.toml
src/reflectai/: __init__.py  cli.py  knowledge.py  models.py  perception.py  pipeline.py  reasoner.py  reflection.py  trainer.py  web.py
src/reflectai/tasks/: __init__.py  equation.py  mnist_add.py  sudoku.py
tests/: test_integration.py  test_knowledge.py  test_models.py  test_perception.py  test_pipeline.py  test_reasoner.py  test_reflection.py  test_tasks.py  test_trainer.py  test_web.py
